--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,6 +1,32 @@
-version: '3.3'
+`version: '3.3'
 
 services:
+  mariadb:
+    container_name: mariadb
+    build:
+      context: ./requirements/mariadb
+    hostname: mariadb
+    restart: always
+    volumes:
+      - volume-mariadb:/var/lib/mysql
+    networks:
+      - jvigneau
+      env_file:
+        - .env
+
+  wordpress:
+    container_name: wordpress
+    build:
+      context: ./requirements/wordpress
+      restart: always
+      volumes:
+        - volume-wordpress:/var/www/html
+      networks:
+        - jvigneau
+      depends_on:
+        - mariadb
+      env_file:
+        - .env
 
   nginx:
     container_name: nginx
@@ -8,6 +34,8 @@ services:
       context: ./requirements/nginx
     ports:
       - 443:443
+      volumes:
+        - volume-wordpress:/var/www/html
     extra_hosts:
         - "jvigneau.42.fr:127.0.0.1"
     env_file:
@@ -19,3 +47,18 @@ services:
 networks:
   jvigneau :
     driver: bridge
+
+volumes:
+  volume-mariadb:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: /home/jvigneau/data/mariadb
+
+  volume-wordpress:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: /home/jvigneau/data/wordpress
