--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,11 +1,13 @@
-FROM debian:buster
+FROM alpine:3.15
 
-RUN apt-get update && apt-get upgrade -y && \
-	apt-get install -y \
-	php-fpm php-mysql mariadb-client bash
+RUN apk update && apk upgrade -y && \
+	apk add --update \
+	php7 php7-fpm php7-opcache php7-mysqli php7-session php7-iconv php7-json \
+	php7-gd php7-curl php7-xml php7-common php7-imap php7-cgi php7-pdo php7-pdo_mysql \
+	php7-soap php7-xmlrpc php7-posix php7-mcrypt php7-redis php7-gettext php7-ldap \
+	php7-ctype php7-dom php7-phar curl bash mariadb-client
 
 RUN mkdir -p /var/www /run/php-mysql
-
 
 COPY ./tools/curlTheStuff.sh ./
 COPY ./conf/www.conf ./
