--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -4,8 +4,8 @@ server {
 
 	server_name $SERV_NAME;
 
-	ssl_certificate	/etc/nginx/ssl/$SSL_CERT;
-	ssl_certificate_key /etc/nginx/ssl/$SSL_KEY;
+	ssl_certificate	/etc/nginx/ssl/nginx_cert.crt;
+	ssl_certificate_key /etc/nginx/ssl/nginx_key.key;
 	ssl_protocols TLSv1.2 TLSv1.3;
 
 	root var/www/html;
