--- a/srcs/.env
+++ b/srcs/.env
@@ -3,7 +3,7 @@ SERV_NAME=jvigneau.42.fr
 WP_DB=DB_Wordpress
 DB_ROOTPASS=RootPass
 DB_USER=wordpress
-DB_USERRPASS=UserPass
+DB_USERPASS=UserPass
 DB_EMAIL=wordpress@superuser.com
 DB_DATADIR=/var/lib/mysql
 
@@ -12,7 +12,7 @@ WP_ADMIN=boss
 WP_AMINPASS=WPAdminPass
 WP_ADMINEMAIL=jvigneau@leboss.fr
 WP_USER=jvigneau
-WP_USERPASS=WPUserPass
+WP_USERPASS=UserPass
 WP_USEREMAIL=jvigneau@student.42quebec.com
 WP_TITLE=Wordpress
 
