--- a/srcs/.env
+++ b/srcs/.env
@@ -9,7 +9,7 @@ DB_DATADIR=/var/lib/mysql
 
 DB_SERV=mariadb
 WP_ADMIN=boss
-WP_AMINPASS=WPAdminPass
+WP_ADMINPASS=WPAdminPass
 WP_ADMINEMAIL=jvigneau@leboss.fr
 WP_USER=jvigneau
 WP_USERPASS=UserPass
