--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -4,16 +4,19 @@ server {
 
 	server_name $SERV_NAME;
 
-	ssl_certificate	/etc/nginx/ssl/nginx_cert.crt;
-	ssl_certificate_key /etc/nginx/ssl/nginx_key.key;
+	ssl_certificate	/etc/ssl/certs/nginx_cert.crt;
+	ssl_certificate_key /etc/ssl/private/nginx_key.key;
 	ssl_protocols TLSv1.2 TLSv1.3;
 
-	root var/www/html;
-	index index.php index.html index.nginx-debian.html;
+	root /var/www/html;
+	index index.php index.html index.htm;
 
-	location / {
-        autoindex   on;
-        try_files   \$uri \$uri/ =404;
+   location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location = /404.html {
+        internal;
     }
 
     location ~ \.php$ {
@@ -23,28 +26,7 @@ server {
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME \$document_root\$fastcgi_script_name;
-        fastcgi_param PATH_INFO \$fastcgi_path_info;
-    }
-
-    location ~ /\.ht {
-        	deny all;
-    }
-        
-    location = /favicon.ico { 
-    	log_not_found off; access_log off; 
-    }
-
-    location = /robots.txt { 
-        log_not_found off; access_log off; allow all; 
     }
     
-    location ~* \.(css|gif|ico|jpeg|jpg|js|png)$ {
-        expires max;
-        log_not_found off;
-    }
-    
-    location = /404.html {
-        internal;
-    }
 
 }
