--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,7 +1,9 @@
 FROM			alpine:3.16
 
+RUN				echo >> /etc/apk/repositeries "http://dl-cdn.alpinelinux.org/alpine/v3.8/community"
+RUN				echo >> /etc/apk/repositeries "http://dl-cdn.alpinelinux.org/alpine/edge/community"
 RUN				apk update && apk upgrade && \
-				apk add php7 php7-fpm php7-opcache php7-mysqli php7-session php7-iconv php7-json \
+				apk adduser php7 php7-fpm php7-opcache php7-mysqli php7-session php7-iconv php7-json \
 				php7-gd php7-curl php7-xml php7-common php7-imap php7-cgi php7-pdo php7-pdo_mysql \
 				php7-soap php7-xmlrpc php7-posix php7-mcrypt php7-redis php7-gettext php7-ldap \
 				php7-ctype php7-dom php7-phar curl bash mariadb-client
