--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -18,7 +18,7 @@ RUN				adduser -D jvigneau
 RUN mkdir -p /var/www/html
 RUN chmod 777 -R /var/www/html
 RUN chown -R jvigneau /var/www/html
-RUN curl https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
 
 RUN chmod +x wp-cli.phar
 RUN mv -f wp-cli.phar /usr/local/bin/wp
