--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -7,7 +7,7 @@ server {
 
 	ssl_certificate			/etc/nginx/ssl/certificates/nginxSsl.crt;
 	ssl_certificate_key		/etc/nginx/ssl/keys/nginxSsl.key;
-	ssl_protocols			TLSv1.2 TLSv1.3
+	ssl_protocols			TLSv1.2 TLSv1.3;
 
 	root					/var/www/html;
 
