--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -3,7 +3,7 @@ server {
 	listen					443 ssl;
 	listen					[::]:443 ssl;
 
-	server_name				SUMO.fr.qc.ca;
+	server_name				$DOMAIN_NAME;
 
 	ssl_certificate			/etc/nginx/ssl/certificates/nginxSsl.crt;
 	ssl_certificate_key		/etc/nginx/ssl/keys/nginxSsl.key;
