--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -40,6 +40,8 @@ services:
       - wordpress
     env_file:
       - .env
+    extra-hosts:
+      - jvigneau.42.fr:localhost
 
 networks:
   Inception:
