--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -104,6 +104,7 @@ expire_logs_days        = 10
 character-set-server  = utf8mb4
 collation-server      = utf8mb4_general_ci
 
+sql_mode= ""
 #
 # * InnoDB
 #
