--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -4,17 +4,16 @@ RUN				apk update && apk upgrade && \
 				apk add php8 php8-fpm php8-opcache php8-mysqli php8-session php8-iconv php8-json \
 				php8-gd php8-curl php8-xml php8-common php8-imap php8-cgi php8-pdo php8-pdo_mysql \
 				php8-soap php8-posix php8-redis php8-gettext php8-ldap \
-				php8-ctype php8-dom php8-phar curl bash mariadb-client supervisor
+				php8-ctype php8-dom php8-phar curl mariadb-client
 
 COPY			./tools/setupWordpress.sh ./setupWordpress.sh
 RUN				chmod +x setupWordpress.sh
 
 COPY			./conf/www.conf ./www.conf
-COPY			./conf/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 RUN				adduser -D jvigneau
 
-RUN mkdir -p /var/www/html /var/log/supervisor
+RUN mkdir -p /var/www/html
 RUN chmod 777 -R /var/www/html
 RUN chown -R jvigneau /var/www/html
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
@@ -24,8 +23,6 @@ RUN mv -f wp-cli.phar /usr/local/bin/wp
 
 EXPOSE 9000
 
-ENTRYPOINT ["/usr/bin/supervisord"]
-
-CMD ["setupWordpress.sh"]
+ENTRYPOINT ["setupWordpress.sh"]
 
 CMD ["php-fpm8", "-F"]
