--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -4,7 +4,7 @@ RUN				apk update && apk upgrade && \
 				apk add php8 php8-fpm php8-opcache php8-mysqli php8-session php8-iconv php8-json \
 				php8-gd php8-curl php8-xml php8-common php8-imap php8-cgi php8-pdo php8-pdo_mysql \
 				php8-soap php8-posix php8-redis php8-gettext php8-ldap \
-				php8-ctype php8-dom php8-phar curl mariadb-client
+				php8-ctype php8-dom php8-phar curl bash mariadb-client
 
 COPY			./tools/setupWordpress.sh ./setupWordpress.sh
 RUN				chmod +x setupWordpress.sh
@@ -23,6 +23,6 @@ RUN mv -f wp-cli.phar /usr/local/bin/wp
 
 EXPOSE 9000
 
-ENTRYPOINT ["setupWordpress.sh"]
+ENTRYPOINT ["bash", "setupWordpress.sh"]
 
 CMD ["php-fpm8", "-F"]
