--- a/srcs/.env
+++ b/srcs/.env
@@ -11,6 +11,8 @@ DB_SERVER=mariadb
 
 WORDPRESS_TITLE=Wordpress
 WORDPRESS_USER=jvigneau
+WORDPRESS_ADMIN=BigBoss
+WORDPRESS_ADMINPASS=Test123!
 WORDPRESS_EMAIL=jvigneau@student.42quebec.com
 WORDPRESS_USERPASS=Test123!
 
