--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,7 +1,7 @@
 FROM			alpine:3.16
 
 RUN				apk update && apk upgrade && \
-					apk add --update mariadb mariadb-common mariadb-client mariadb-server-utils gettext bash
+					apk add --update dumb-init mariadb mariadb-common mariadb-client mariadb-server-utils gettext bash
 
 RUN				rm -rf /etc/my.cnf
 COPY			conf/my.cnf /etc/my.cnf
@@ -22,6 +22,8 @@ RUN				chown -R mysql:mysql /run/mysqld
 
 EXPOSE			3306
 
-ENTRYPOINT		["bash", "setupMariaDb.sh"]
+ENTRYPOINT		["/usr/bin/dumb-init"]
+
+CMD				["bash", "setupMariaDb.sh"]
 
 CMD				["mysqld"]
