--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -14,6 +14,7 @@ server {
 	index					index.php index.html index.htm;
 
 	location / {
+		autoindex			on;
 		try_files			$uri $uri/ /index.php?$query_string;
 	}
 
